@@ -59,15 +59,15 @@
       <version>1.1</version>
     </dependency>
     <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.el</artifactId>
+      <version>3.0.1-b08</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
       <version>1.7.5</version>
       <exclusions>
-        <exclusion>
-          <!-- Don't pull in Avro's (later) version of Jetty.-->
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>jetty</artifactId>
-        </exclusion>
         <exclusion>
           <!-- Exclude Avro's version of ant since it conflicts with Jetty's.-->
           <groupId>org.apache.ant</groupId>
@@ -95,12 +95,6 @@
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>1.8.0.10</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty-util</artifactId>
-      <version>6.1.26</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
